Solved minor bugs and cleaned code

--- a/frontend/pages/regole.html
+++ b/frontend/pages/regole.html
@@ -3,17 +3,14 @@
 
 <head>
     <title>FantaScientifico</title>
+    <link href="/favicon.ico" rel="icon" type="image/x-icon">
+    
     <link href="/stylesheet?filename=main-style.css" rel="stylesheet">
     <link href="/stylesheet?filename=home.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, inital-scale=1">
 </head>
 
 <body>
-    <div id="fullscreen-buttons" class="fixed-bar fixed-top">
-        <button id="fullscreen" class="squared-little-button" onclick="enterFullscreen()">F</button>
-        <button id="exit-fullscreen" class="squared-little-button" onclick="enterPartialscreen()">E</button>
-    </div>
-
     <div id="welcome-div" class="hcentered vcentered">
         <h1 class="welcome-header" onclick="window.location.href='/'">FantaScientifico</h1>
         <h1 class="welcome-header">Regole</h1>
