--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="welcome-div" class="hcentered vcentered">
-        <h1 class="welcome-header" onclick="window.location.href='/'">FantaScientifico</h1>
+        <h1 class="welcome-header" onclick="window.location.href='/'">FANTA VOLTA</h1>
     </div>
 
     <div id="menu-bar" class="fixed-bar fixed-bottom hcentered">
