--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="welcome-div" class="hcentered vcentered">
-        <h1 class="welcome-header" onclick="window.location.href='/'">FantaScientifico</h1>
+        <h1 class="welcome-header" onclick="window.location.href='/'">FANTA VOLTA</h1>
         <h1 class="welcome-header">Login</h1>
     </div>
 
