Solved page title error

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>FantaScientifico</title>
+    <title>Fanta Volta</title>
     <link href="/favicon.ico" rel="icon" type="image/x-icon">
 
     <link href="/stylesheet?filename=main-style.css" rel="stylesheet">
