Updated site homepage

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -7,13 +7,18 @@
 
     <link href="/stylesheet?filename=main-style.css" rel="stylesheet">
     <link href="/stylesheet?filename=home.css" rel="stylesheet">
+    <link href="/stylesheet?filename=scattered-background.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, inital-scale=1">
 </head>
 
 <body>
+    <div id="stars"></div>
+
     <div id="welcome-div" class="hcentered vcentered">
-        <h1 class="welcome-header" onclick="window.location.href='/'">FANTA VOLTA</h1>
+        <h1 class="welcome-header regular" onclick="window.location.href='/'">FANTA</h1>
+        <span style="width: 2vw;"></span>
+        <h1 class="welcome-header thin" onclick="window.location.href='/'">VOLTA</h1>
     </div>
 
     <div id="menu-bar" class="fixed-bar fixed-bottom hcentered">
