--- a/frontend/pages/regole.html
+++ b/frontend/pages/regole.html
@@ -12,7 +12,8 @@
 
 <body>
     <div id="welcome-div" class="hcentered vcentered">
-        <h1 class="welcome-header" onclick="window.location.href='/'">FANTA VOLTA</h1>
+        <h1 class="welcome-header" onclick="window.location.href='/'">FANTA </h1>
+        <h1 class="welcome-header" onclick="window.location.href='/'">VOLTA</h1>
         <h1 class="welcome-header">Regole</h1>
     </div>
 
