--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, inital-scale=1">
 </head>
 
-<body>
+<body class="hblock vblock">
     <div id="stars"></div>
 
     <div id="welcome-div" class="hcentered vcentered">
