--- a/frontend/pages/punteggi.html
+++ b/frontend/pages/punteggi.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, inital-scale=1">
 </head>
 
-<body>
+<body class="hblock">
     <div id="welcome-div" class="hcentered" style="justify-content: left;">
         <div id="icon-background">
             <h1 class="welcome-header regular" onclick="window.location.href='/'">FANTA</h1>
